<resources>
    <string name="app_name">Space Combat Simulation</string>

    <string name="butSP">Single Player</string>
    <string name="butMP">Multi Player</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="music">Music</string>
    <string name="sounds">Sound</string>
    <string name="musicVolume">Music volume</string>
    <string name="soundVolume">Sound volume</string>
    <string name="viewMode">View mode</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="indicators">Indicators</string>
    <string name="battery">Battery</string>
    <string name="clock">Clock</string>

    <string name="selectMap">Select a map</string>
    <string name="mapThumb">Map thumbnail</string>
    <string name="mapName">Map name</string>
    <string name="mapScale">Scale</string>
    <string name="mapBrightness">Brightness</string>

    <string name="selectShip">Select a ship</string>
    <string name="shipThumb">Ship thumbnail</string>
    <string name="shipName">Ship name</string>

    <string name="background">Background</string>

    <string name="fire">Fire</string>
    <string name="shield">Shield</string>
    <string name="hull">Hull</string>
    <string name="energy">Energy</string>
    <string name="velocity">Velocity</string>
</resources>
