<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hyperion.spacecombatsimulation.Settings">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/musicBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:layout_constraintVertical_chainStyle="packed">

        <Switch
            android:id="@+id/switchMusic"
            style="@style/Switch"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/music"
            app:layout_constraintEnd_toStartOf="@+id/switchSounds"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/musicBar"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switchSounds"
            style="@style/Switch"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/sounds"
            app:layout_constraintEnd_toEndOf="@+id/musicBar"
            app:layout_constraintStart_toEndOf="@+id/switchMusic"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/textMusic"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musicVolume"
        app:layout_constraintBottom_toTopOf="@+id/musicBar"
        app:layout_constraintEnd_toEndOf="@+id/musicBar"
        app:layout_constraintStart_toStartOf="@+id/musicBar" />

    <SeekBar
        android:id="@+id/musicBar"
        style="@style/SeekBar"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@+id/soundBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/textSound"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soundVolume"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/soundBar"
        app:layout_constraintEnd_toEndOf="@+id/soundBar"
        app:layout_constraintStart_toStartOf="@+id/soundBar" />

    <SeekBar
        android:id="@+id/soundBar"
        style="@style/SeekBar"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:progress="100"
        app:layout_constraintBottom_toTopOf="@+id/toggleMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicBar" />

    <TextView
        android:id="@+id/textViewMode"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/viewMode"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/toggleMode"
        app:layout_constraintEnd_toEndOf="@+id/toggleMode"
        app:layout_constraintStart_toStartOf="@+id/toggleMode" />

    <ToggleButton
        android:id="@+id/toggleMode"
        style="@style/Button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="32dp"
        android:textOff="@string/horizontal"
        android:textOn="@string/vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundBar"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textIndicators"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indicators"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/toggleMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toggleMode"
        app:layout_constraintTop_toTopOf="@+id/textViewMode">

        <CheckBox
            android:id="@+id/checkBattery"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:text="@string/battery"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/checkClock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toggleMode"
            app:layout_constraintTop_toBottomOf="@+id/soundBar"
            app:layout_constraintVertical_chainStyle="packed" />

        <CheckBox
            android:id="@+id/checkClock"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:text="@string/clock"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toggleMode"
            app:layout_constraintTop_toBottomOf="@+id/checkBattery" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleMode">

        <Button
            android:id="@+id/butBack"
            style="@style/Button"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:onClick="button_click"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soundBar" />

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/butSave"
            style="@style/Button"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:onClick="button_click"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soundBar" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
