<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.example.hyperion.spacecombatsimulation.Main">

    <com.example.hyperion.spacecombatsimulation.MenuBackground
        android:id="@+id/menuBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#b4bccc"
        android:shadowColor="#c8114da7"
        android:shadowRadius="20"
        android:backgroundTint="@color/colorTransparent"
        app:layout_constraintBottom_toTopOf="@+id/butSP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butSP"
        style="@style/ButtonStyle"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:onClick="button_click"
        android:text="@string/butSP"
        app:layout_constraintBottom_toTopOf="@+id/butMP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/butMP"
        style="@style/ButtonStyle"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:clickable="false"
        android:enabled="false"
        android:onClick="button_click"
        android:text="@string/butMP"
        app:layout_constraintBottom_toTopOf="@+id/butSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butSP"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/butSettings"
        style="@style/ButtonStyle"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:onClick="button_click"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/butExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butMP"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/butExit"
        style="@style/ButtonStyle"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:onClick="button_click"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butSettings"
        app:layout_constraintVertical_chainStyle="packed" />

</android.support.constraint.ConstraintLayout>
