<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageMap"
        style="@style/Button"
        android:background="@drawable/menu_thumbnail"
        android:layout_width="0dp"
        android:layout_height="190dip"
        android:layout_margin="10dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/mapThumb"
        android:foregroundGravity="center_vertical|fill_horizontal"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textName"
        app:layout_constraintDimensionRatio="w,16:10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:onClick="button_click" />

    <TextView
        android:id="@+id/textName"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/mapName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textScale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMap" />

    <TextView
        android:id="@+id/textScale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/mapScale"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />


</android.support.constraint.ConstraintLayout>