<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hyperion.spacecombatsimulation.Game">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.hyperion.spacecombatsimulation.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/colorTransparent" />

    <com.example.hyperion.spacecombatsimulation.Joystick
        android:id="@+id/joystick"
        android:layout_width="140dip"
        android:layout_height="170dip"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/colorTransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butFire"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="button_click"
        android:background="@drawable/fire_button"
        android:text="@string/fire"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textVelocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorTransparent"
        android:text="@string/velocity"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/joystick"
        app:layout_constraintEnd_toEndOf="@+id/joystick"
        app:layout_constraintStart_toStartOf="@+id/joystick" />

</android.support.constraint.ConstraintLayout>
